--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Git_status</p>
     <p>Git diff</p>
     <p>git commit --amend</p>
-    <p>git merge</p> 
+    <p>git merge</p>
+    <p>コンフリクト</p>
 </body>
 </html>
